# embedded-learning

software-timer/: CMakeLists.txt
software-timer/include/: hardware_sim.hpp  motor_controller.hpp  motor_driver.hpp  ring_buffer.hpp  scheduler.hpp  timer.hpp  types.hpp
software-timer/src/: main.cpp
